# llm-benchmark

./: .gitignore  README.md  prepare_output_dirs.sh  pyproject.toml  run_mutmut.sh  setup.cfg
in/app/: main.py
in/prompts/: 1_zero-shot.md  2_Instructional.md  3_metrics_aware.md
